force-app/main/default/objects/ASF_Case_Rule_Entry__c/ASF_Case_Rule_Entry__c.object-meta.xml
<CustomObject>
    <label>Case Rule Entry</label>
    <nameField>
        <displayFormat>CRE-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>