force-app/main/default/objects/ASF_Case_Rule_Entry__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STRING</fullName>
            </value>
            <value>
                <fullName>DECIMAL</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>